# presidents

./: .gitignore  README.md  __main__.py  main.py  presidents.py  pyproject.toml  quiz_settings.py  requirements.txt  responses.py  ruff.toml
.github/workflows/: ci.yml
src/presidents_quiz/: __main__.py  formatting.py  main.py  presidents.py  quiz_settings.py  quiz_statistics.py  responses.py
tests/: test_formatting.py  test_helpers.py  test_integration.py  test_parse_arguments.py  test_presidents.py  test_quiz_statistics.py  test_responses.py  test_settings.py  test_statistics.py
